# qmutil

./: 10.build-final.sh  CMakeLists.txt  COPYING  README.md
doc/: man_template
lib/: CMakeLists.txt  conv.awk  extract-fchk-pts.awk  extract-gdrv-ene.awk  extract-gdrv-pts.awk  extract-gdrv-xyz.awk  extract-gopt-ene.awk  extract-gopt-xyz.awk  extract-xyz-numofstr.awk  extract-xyz-str.awk  periodic-table.awk
man/: CMakeLists.txt
man/man1/: extract-fchk-pts.1  extract-gdrv-ene.1  extract-gdrv-pts.1  extract-gdrv-xyz.1  extract-gopt-ene.1  extract-gopt-xyz.1  extract-xyz-numstr.1  extract-xyz-str.1  qmutil.1  xyzmultifit.1
