# ==============================================================================
# qmutil
# ==============================================================================

INSTALL(FILES
            extract-gdrv-ene.awk
            extract-gdrv-xyz.awk
            extract-gopt-ene.awk
            extract-gopt-xyz.awk
            extract-xyz-numofstr.awk
            extract-xyz-str.awk
            periodic-table.awk
        DESTINATION
            lib
        )
