# ==============================================================================
# qmutil
# ==============================================================================

INSTALL(FILES
            extract-gdrv-ene.awk
            extract-gdrv-xyz.awk
            extract-gdrv-pts.awk
            extract-gopt-ene.awk
            extract-gopt-xyz.awk
            extract-xyz-numofstr.awk
            extract-xyz-str.awk
            extract-fchk-pts.awk
            periodic-table.awk
            conv.awk
        DESTINATION
            lib
        )
